--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TakRunUSA | Takuya's Portfolio</title>
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
@@ -48,7 +49,7 @@
             text-transform: uppercase;
             letter-spacing: 1px;
         }
-        .logo span { color: var(--accent); } /* "USA"などを色変え */
+        .logo span { color: var(--accent); }
 
         nav ul { display: flex; gap: 30px; list-style: none; margin: 0; }
         nav a { 
@@ -60,11 +61,11 @@
         }
         nav a:hover { color: var(--accent); }
 
-        /* --- ヒーローセクション（トップ画像エリア） --- */
+        /* --- ヒーローセクション --- */
         .hero {
             background: linear-gradient(135deg, var(--primary), var(--secondary));
             color: var(--text-light);
-            height: 60vh; /* 画面の60%の高さ */
+            height: 60vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -123,7 +124,21 @@
             margin: 10px auto 0;
         }
 
-        /* --- About (2カラムレイアウト) --- */
+        /* --- About (写真とテキスト) --- */
+        
+        /* ▼▼▼ 写真のデザイン設定 ▼▼▼ */
+        .profile-img {
+            width: 200px;        /* 写真の横幅 */
+            height: 200px;       /* 写真の高さ */
+            object-fit: cover;   /* 枠に合わせてトリミング */
+            border-radius: 50%;  /* 完全な丸にする */
+            border: 5px solid var(--accent); /* オレンジ色の枠線 */
+            margin: 0 auto 30px; /* 中央寄せと下の余白 */
+            display: block;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            background-color: #fff; /* 写真読み込み前の背景 */
+        }
+
         .about-container {
             display: flex;
             flex-wrap: wrap;
@@ -142,7 +157,7 @@
         .stat-label { font-size: 0.8rem; color: #888; display: block; }
         .stat-value { font-size: 1.2rem; font-weight: bold; color: var(--primary); }
 
-        /* --- Works (カードデザイン) --- */
+        /* --- Works --- */
         .grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -196,6 +211,7 @@
 </head>
 <body>
 
+    <!-- ヘッダー -->
     <header>
         <div class="logo">TakRun<span>USA</span></div>
         <nav>
@@ -207,19 +223,27 @@
         </nav>
     </header>
 
+    <!-- ヒーローエリア -->
     <section class="hero">
         <h1>Run & Create</h1>
         <p>Supply Chain Professional / Marathon Runner in Georgia</p>
         <a href="#about" class="btn-main">View Profile</a>
     </section>
 
+    <!-- About Me -->
     <section id="about">
         <h2>About Me</h2>
+        
+        <!-- ▼▼▼ ここが写真のコードです！ファイル名を書き換えてください ▼▼▼ -->
+        <img src="Screenshot2025-10-24100448.jpg" alt="TakRunUSA Profile" class="profile-img">
+        <!-- ▲▲▲ profile.jpg の部分を、アップロードしたファイル名に変更 ▲▲▲ -->
+
         <div class="about-container">
             <div class="about-text">
                 <p>はじめまして。アメリカ・ジョージア州でサプライチェーンマネジメントの仕事をしながら、ランニングとプログラミングを楽しんでいます。</p>
                 <p>「TakRunUSA」という名前の通り、アメリカの道を走りながら、日々の気づきや開発したツールをここで発信していきます。</p>
             </div>
+            <!-- 右側のステータスボックス -->
             <div class="about-stats">
                 <div class="stat-item">
                     <span class="stat-label">Location</span>
@@ -237,9 +261,11 @@
         </div>
     </section>
 
+    <!-- Works / Projects -->
     <section id="works">
         <h2>Projects</h2>
         <div class="grid">
+            <!-- カード1 -->
             <article class="card">
                 <div class="card-content">
                     <span class="tag">Web App</span>
@@ -247,6 +273,7 @@
                     <p>業務効率化のために作成した、モバイル見積もりツール。</p>
                 </div>
             </article>
+            <!-- カード2 -->
             <article class="card">
                 <div class="card-content">
                     <span class="tag">Running</span>
@@ -254,6 +281,7 @@
                     <p>これまでの大会記録や、日々のトレーニングログ。</p>
                 </div>
             </article>
+            <!-- カード3 -->
             <article class="card">
                 <div class="card-content">
                     <span class="tag">Blog</span>
@@ -264,11 +292,12 @@
         </div>
     </section>
 
+    <!-- Contact -->
     <section id="contact">
         <div class="contact-box">
             <h2>Contact</h2>
             <p>お問い合わせやSNSのフォローはこちらから。</p>
-            <a href="#" class="btn-main">Send Email</a>
+            <a href="mailto:your-email@example.com" class="btn-main">Send Email</a>
         </div>
     </section>
 
