--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <h2>About Me</h2>
         
         <!-- ▼▼▼ ここが写真のコードです！ファイル名を書き換えてください ▼▼▼ -->
-        <img src="Me.jpg" alt="TakRunUSA Profile" class="profile-img">
+        <img src="Me.JPG" alt="TakRunUSA Profile" class="profile-img">
         <!-- ▲▲▲ profile.jpg の部分を、アップロードしたファイル名に変更 ▲▲▲ -->
 
         <div class="about-container">
@@ -316,4 +316,3 @@
     </script>
 </body>
 </html>
-
