--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
     <!-- ✨ GEMINI API SCRIPT -->
     <script>
         // API Key embedded directly in the code
-        const apiKey = "AIzaSyBoC1YSTEydtoGoJFyYeKiyIpmf6m2d8Pw";
+        const apiKey = "";
 
         async function askGemini() {
             const query = document.getElementById('userQuery').value;
@@ -816,3 +816,4 @@
 
 </body>
 </html>
+
